--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Justin Tormey <justin@blockchain.com>"
+  "author": "Justin Tormey <justin@blockchain.com>",
+  "dependencies": {
+    "bitcoinjs-lib": "^2.1.4"
+  }
 }
