use immutablejs for tracking addresses

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "Justin Tormey <justin@blockchain.com>",
   "dependencies": {
-    "bitcoinjs-lib": "^2.1.4"
+    "bitcoinjs-lib": "^2.1.4",
+    "immutable": "^3.7.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
